GUI-1377 Fix drag drop column when selected has wrong color bug

--- a/stylesheets/less/partials/worksheet.less
+++ b/stylesheets/less/partials/worksheet.less
@@ -76,7 +76,7 @@
         border-left: none !important;
     }
     &.selectedCol {
-        .flexContainer{
+        .header .flexContainer{
             .action-gradient;
 
             .editableHead {
